# ssnake

./: CMakeLists.txt
include/: bot.h  config.h  globals.h  input.h  move.h  utils.h
src/: bot.c  globals.c  input.c  main.c  move.c  utils.c
